# dotfiles-manager

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  integration_tests.sh
docs/presentation/: index.html
man/: dotfiles-manager.1  dotfiles-manager.1.txt
scripts/: gen-coverage.sh
src/: app.rs  args.rs  file_ops.rs  hooks.rs  main.rs  runner.rs
test/integration_tests/: test_add_file.sh  test_add_file_no.sh  test_add_file_simulate.sh  test_add_host_file.sh  test_add_host_file_creating_dirs.sh  test_add_host_file_force.sh  test_add_host_file_no_force.sh  test_bad_return_code_hook.sh  test_confirm_install.sh  test_confirm_no_install.sh  test_confirm_uninstall_vim.sh  test_fail_hook.sh  test_force_install.sh  test_force_uninstall.sh  test_help_output.sh  test_install_vim.sh  test_install_vim_simulate.sh  test_install_zsh.sh  test_invalid_argument.sh  test_no_force_install.sh  test_no_uninstall.sh  test_uninstall_existing_files.sh  test_uninstall_vim.sh  test_uninstall_vim_simulate.sh  test_uninstall_vim_zsh.sh  zztest_test.sh
test/integration_tests/tests/: test_help_output.sh
test/repo/vim/files/: .vimrc
test/repo/vim/files/.vim/: filetype.vim
test/repo/vim/hooks/post-down/: post-down-final.sh
test/repo/vim/hooks/post-up/: install_plugins.sh
test/repo/vim/hooks/pre-down/: setup.sh
test/repo/vim/hooks/pre-up/: setup.sh
test/repo/vim/hosts/desktop1/files/: .vimrc
test/repo/vim/hosts/desktop1/hooks/post-down/: remove_vim_package.sh
test/repo/vim/hosts/desktop1/hooks/post-up/: 00-install_plugins.sh  (+1 more)
test/repo/zsh/files/: .zshrc
(+5 files in other folders)
